@@ -11,11 +11,11 @@ class MyRunAction : public G4UserRunAction
 {
   public:
     MyRunAction();
-    ~MyRunAction();
+    virtual ~MyRunAction();
 
   public:
-    void BeginOfRunAction(G4Run* aRun);
-    void EndOfRunAction(G4Run* aRun);
+    virtual void BeginOfRunAction(const G4Run* aRun);
+    virtual void EndOfRunAction(const G4Run* aRun);
 
   private:
     G4int runIDcounter;
