@@ -1,4 +1,4 @@
-// $Id: MyPhysicsList.cc,v 1.1 1999-01-08 16:34:47 gunter Exp $
+// $Id: MyPhysicsList.cc,v 1.2 1999-04-17 05:04:46 kurasige Exp $
 // ------------------------------------------------------------
 //	GEANT 4 class header file 
 //
@@ -16,6 +16,11 @@
 #include "G4ProcessVector.hh"
 #include "G4ParticleTypes.hh"
 #include "G4ParticleTable.hh"
+#include "G4BosonConstructor.hh"
+#include "G4LeptonConstructor.hh"
+#include "G4MesonConstructor.hh"
+#include "G4BarionConstructor.hh"
+#include "G4IonConstructor.hh"
 #include "G4Material.hh"
 #include "G4MaterialTable.hh"
 #include "G4ios.hh"
@@ -42,113 +47,42 @@ void MyPhysicsList::ConstructParticle()
   ConstructLeptons();
   ConstructMesons();
   ConstructBarions();
-
+  ConstructIons();
 }
 
 void MyPhysicsList::ConstructBosons()
 {
-  // pseudo-particles
-  G4Geantino::GeantinoDefinition();
-  G4ChargedGeantino::ChargedGeantinoDefinition();
-
-  // gamma
-  G4Gamma::GammaDefinition();
-
-  // optical photon
-  G4OpticalPhoton::OpticalPhotonDefinition();
+  // Construct all bosons
+  G4BosonConstructor pConstructor;
+  pConstructor.ConstructParticle();
 }
 
 void MyPhysicsList::ConstructLeptons()
 {
-  // leptons
-  G4MuonPlus::MuonPlusDefinition();
-  G4MuonMinus::MuonMinusDefinition();
-  G4TauMinus::TauMinusDefinition();
-  G4TauPlus::TauPlusDefinition();
-  G4Electron::ElectronDefinition();
-  G4Positron::PositronDefinition();
-  G4NeutrinoTau::NeutrinoTauDefinition();
-  G4AntiNeutrinoTau::AntiNeutrinoTauDefinition();
-  G4NeutrinoMu::NeutrinoMuDefinition();
-  G4AntiNeutrinoMu::AntiNeutrinoMuDefinition();
-  G4NeutrinoE::NeutrinoEDefinition();
-  G4AntiNeutrinoE::AntiNeutrinoEDefinition();
+  // Construct all leptons
+  G4LeptonConstructor pConstructor;
+  pConstructor.ConstructParticle();
 }
 
 void MyPhysicsList::ConstructMesons()
 {
- //  mesons
-  G4PionPlus::PionPlusDefinition();
-  G4PionMinus::PionMinusDefinition();
-  G4PionZero::PionZeroDefinition();
-  G4Eta::EtaDefinition();
-  G4KaonPlus::KaonPlusDefinition();
-  G4KaonMinus::KaonMinusDefinition();
-  G4KaonZero::KaonZeroDefinition();
-  G4AntiKaonZero::AntiKaonZeroDefinition();
-  G4KaonZeroLong::KaonZeroLongDefinition();
-  G4KaonZeroShort::KaonZeroShortDefinition();
-
-  G4DMesonPlus::DMesonPlusDefinition();
-  G4DMesonMinus::DMesonMinusDefinition();
-  G4DMesonZero::DMesonZeroDefinition();
-  G4AntiDMesonZero::AntiDMesonZeroDefinition();
-  G4DsMesonPlus::DsMesonPlusDefinition();
-  G4DsMesonMinus::DsMesonMinusDefinition();
-  G4JPsi::JPsiDefinition();
-
-  G4BMesonPlus::BMesonPlusDefinition();
-  G4BMesonMinus::BMesonMinusDefinition();
-  G4BMesonZero::BMesonZeroDefinition();
-  G4AntiBMesonZero::AntiBMesonZeroDefinition();
-  G4BsMesonZero::BsMesonZeroDefinition();
-  G4AntiBsMesonZero::AntiBsMesonZeroDefinition();
+  //  Construct all mesons
+  G4MesonConstructor pConstructor;
+  pConstructor.ConstructParticle();
 }
 
 void MyPhysicsList::ConstructBarions()
 {
-//  barions
-  G4Proton::ProtonDefinition();
-  G4AntiProton::AntiProtonDefinition();
-  G4Neutron::NeutronDefinition();
-  G4AntiNeutron::AntiNeutronDefinition();
-  G4Lambda::LambdaDefinition();
-  G4AntiLambda::AntiLambdaDefinition();
-  G4SigmaZero::SigmaZeroDefinition();
-  G4AntiSigmaZero::AntiSigmaZeroDefinition();
-  G4SigmaPlus::SigmaPlusDefinition();
-  G4AntiSigmaPlus::AntiSigmaPlusDefinition();
-  G4SigmaMinus::SigmaMinusDefinition();
-  G4AntiSigmaMinus::AntiSigmaMinusDefinition();
-  G4XiZero::XiZeroDefinition();
-  G4AntiXiZero::AntiXiZeroDefinition();
-  G4XiMinus::XiMinusDefinition();
-  G4AntiXiMinus::AntiXiMinusDefinition();
-  G4OmegaMinus::OmegaMinusDefinition();
-  G4AntiOmegaMinus::AntiOmegaMinusDefinition();
-
-  G4LambdacPlus::LambdacPlusDefinition();
-  G4SigmacPlusPlus::SigmacPlusPlusDefinition();
-  G4SigmacPlus::SigmacPlusDefinition();
-  G4SigmacZero::SigmacZeroDefinition();
-  G4XicPlus::XicPlusDefinition();
-  G4XicZero::XicZeroDefinition();
-  G4OmegacZero::OmegacZeroDefinition();
-  G4AntiLambdacPlus::AntiLambdacPlusDefinition();
-  G4AntiSigmacPlusPlus::AntiSigmacPlusPlusDefinition();
-  G4AntiSigmacPlus::AntiSigmacPlusDefinition();
-  G4AntiSigmacZero::AntiSigmacZeroDefinition();
-  G4AntiXicPlus::AntiXicPlusDefinition();
-  G4AntiXicZero::AntiXicZeroDefinition();
-  G4AntiOmegacZero::AntiOmegacZeroDefinition();
+  //  Construct all barions
+  G4BarionConstructor pConstructor;
+  pConstructor.ConstructParticle();
 }
 
 void MyPhysicsList::ConstructIons()
 {
-  //  nuclei
-  G4Alpha::AlphaDefinition();
-  G4Deuteron::DeuteronDefinition();
-  G4Triton::TritonDefinition();
+  //  Construct light ions
+  G4IonConstructor pConstructor;
+  pConstructor.ConstructParticle();  
 }
 
 void MyPhysicsList::ConstructProcess()
@@ -246,29 +180,14 @@ void MyPhysicsList::ConstructGeneral()
   }
 }
 
-void MyPhysicsList::SetCuts(G4double cut)
+void MyPhysicsList::SetCuts()
 {
   if (verboseLevel >0){
     G4cout << "MyPhysicsList::SetCuts:";
-    G4cout << "CutLength : " << cut/mm << " (mm)" << endl;
+    G4cout << "CutLength : " << defaultCutValue/mm << " (mm)" << endl;
   }  
 
-  // set cut values for gamma at first and for e- second and next for e+,
-  // because some processes for e+/e- need cut values for gamma 
-  SetCutValue(cut, "gamma");
-  SetCutValue(cut, "e-");
-  SetCutValue(cut, "e+");
- 
-  // set cut values for proton and anti_proton before all other hadrons
-  // because some processes for hadrons need cut values for proton/anti_proton 
-  SetCutValue(cut, "proton");
-  SetCutValue(cut, "anti_proton");
-  
-  SetCutValueForOthers(cut);
-
-  if (verboseLevel>1) {
-    DumpCutValuesTable();
-  }
-}
-
-
+  //  " G4VUserPhysicsList::SetCutsWithDefault" method sets 
+  //   the default cut value for all particle types 
+  SetCutsWithDefault();   
+} 
