@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-08 16:34:44 gunter Exp $
+$Id: History,v 1.2 1999-04-17 05:04:39 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,11 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+17 Apr., 1999 H.Kurashige 
+- Modify SetCuts() and ConstructParticle() in MyPhysicsList
+- Modify BeginOfRunAction() and EndOfRunAction() in MyRunAction
+- Modify BeginOfEventAction() and EndOfEventAction() in MyEvent
+- Modify ClassifyNewTrack()  in MyStackingAction
 
 July 15, 98 Y. Morita
 - GNUmakefile  cleandb target revised
